<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ProfilActivity"
    android:background="@drawable/bggradient"
    android:padding="5dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#FFC107"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:orientation="vertical"
            android:padding="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:src="@drawable/myphoto"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_margin="5dp"
                app:civ_border_width="4dp"
                app:civ_border_color="#FFFFFF"
                android:layout_gravity="center"
                android:scaleType="centerCrop"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:text="@string/pascal_aditia_muclis"
                    android:textColor="#FFFFFF"
                    android:gravity="center"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/android_development"
                    android:typeface="serif"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textColor="#837B7B"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sukabumi"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:drawableLeft="@drawable/ic_tempat"
        android:textColor="#FFFFFF"
        android:drawablePadding="5dp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/univeristas_nusa_putra"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:drawableLeft="@drawable/ic_kampus"
        android:drawablePadding="5dp"
        android:textColor="#fff"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_085864147378"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:drawableLeft="@drawable/ic_telpon"
        android:drawablePadding="5dp"
        android:textColor="#fff"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/pascaladitia_gmail_com"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="#FFC107"
        android:textColor="#000000"/>

</LinearLayout>